# Makefile.am for Rusty KevEdit theme

noinst_LIBRARIES = librusty.a

librusty_a_SOURCES = cbox.c scroll.c tbox.c tdialog.c \
	panel.c panel_board_dialog.c panel_board_info.c panel_dir_dialog.c panel_editor.c panel_f1.c panel_f2.c panel_f3.c panel_file_dialog.c panel_filename_dialog.c panel_gradient1.c panel_gradient2.c panel_help_dialog.c panel_stats_dialog.c panel_tile_info.c panel_world_info.c \
	rusty.h
